--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>hello</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut, assumenda eum cupiditate eius perferendis beatae distinctio perspiciatis eligendi amet adipisci vitae, asperiores quas. Molestiae numquam tempore temporibus ipsa tempora?</p>
+    <div class="block"></div>
 </body>
 </html>
