--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,47 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>hello</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut, assumenda eum cupiditate eius perferendis beatae distinctio perspiciatis eligendi amet adipisci vitae, asperiores quas. Molestiae numquam tempore temporibus ipsa tempora?</p>
-    <div class="block"></div>
+    <div class="container offset">
+        <header class="head offset">
+            <a href="#">
+                <img class="logo" src="images/Logo (1).png" alt="">
+                <br>
+
+                <img class="img" src="images/Main.png" alt="">
+                <p>Продукты</p>
+
+                <img class="img" src="images/Transfers.png" alt="">
+                <p>Переводы</p>
+
+                <img class="img" src="images/Payments.png" alt="">
+                <p>Платежи</p>
+
+                <img class="img" src="images/History.png" alt="">
+                <p>История</p>
+
+                <img class="img" src="images/Settings.png" alt="">
+                <p class="mr">Настройки</p>
+            </a>
+
+        </header>
+
+        <section class="head_int offset">
+            <div class="head_search">
+                <input type="search" placeholder="Поиск">
+            </div>
+
+            <div class="head_surname">
+                <img src="images/Screen.png" alt="">
+                <p>133 458,32 ₽</p>
+                <img src="images/Line.png" alt="">
+                <img src="images/Messages.png" alt="">
+                <p>Имя Фамилия</p>
+                <img src="images/Userpic.png" alt="" srcset="">
+            </div>
+        </section>
+    </div>
 </body>
+
 </html>
