--- a/index.html
+++ b/index.html
@@ -53,13 +53,26 @@
     </div>
 
     <section class="body offset">
-        
-        <div class="d-flex j_img">
-            <img class="" src="images/Card.png" alt="">
-            <img class="" src="images/Card (1).png" alt="">
-            <img class="" src="images/Card (2).png" alt="">
-            <img class="" src="images/Card (3).png" alt="">
+
+        <div class="about_carousel">
+
+            <div class="arrow prev">
+                <img src="images/arrow_Left.png">
+            </div>
+
+            <div class="owl-carousel owl-theme d-flex j_img">
+                <img class="" src="images/Card.png" alt="">
+                <img class="" src="images/Card (1).png" alt="">
+                <img class="" src="images/Card (2).png" alt="">
+                <img class="" src="images/Card (3).png" alt="">
+            </div>
+
+            <div class="arrow next">
+                <img src="images/arrow_Left.png">
+            </div>
         </div>
+
+
 
         <div class="d-flex">
             <div class="cost d-flex flex-column col-3">
@@ -162,11 +175,23 @@
     </section>
 
     <section class="body offset">
-        <div>
-            <img class="" src="images/Card (8).png" alt="">
-            <img class="" src="images/Card (9).png" alt="">
-            <img class="" src="images/Card (10).png" alt="">
-            <img class="" src="images/Card (11).png" alt="">
+
+        <div class="about_carousel">
+
+            <div class="arrow prev">
+                <img src="images/arrow_Left.png">
+            </div>
+
+            <div class="owl-carousel owl-theme d-flex j_img">
+                <img class="" src="images/Card (8).png" alt="">
+                <img class="" src="images/Card (9).png" alt="">
+                <img class="" src="images/Card (10).png" alt="">
+                <img class="" src="images/Card (11).png" alt="">
+            </div>
+
+            <div class="arrow next">
+                <img src="images/arrow_Left.png">
+            </div>
         </div>
 
         <div class="d-flex">
@@ -203,11 +228,23 @@
     </div>
 
     <section class="body offset">
-        <div>
-            <img class="" src="images/Card (12).png" alt="">
-            <img class="" src="images/Card (13).png" alt="">
-            <img class="" src="images/Card (14).png" alt="">
-            <img class="" src="images/Card (15).png" alt="">
+
+        <div class="about_carousel">
+
+            <div class="arrow prev">
+                <img src="images/arrow_Left.png">
+            </div>
+
+            <div class="owl-carousel owl-theme d-flex j_img">
+                <img class="" src="images/Card (12).png" alt="">
+                <img class="" src="images/Card (13).png" alt="">
+                <img class="" src="images/Card (14).png" alt="">
+                <img class="" src="images/Card (15).png" alt="">
+            </div>
+
+            <div class="arrow next">
+                <img src="images/arrow_Left.png">
+            </div>
         </div>
 
         <div class="d-flex">
