--- a/exam/home_index.html
+++ b/exam/home_index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="home_body">
     <div class="home_container">
 
         <header class="home_head home_offset d-flex justify-content-between">
@@ -35,19 +35,24 @@
                 <p class=" home_text_fff home_text_fff_ux">Diseñador UI/UX</p>
                 <p class=" home_text_fff home_text_fff_ui">Diseñador UI</p>
             </div>
-            <p class="home_text_500">Este es mi portafolio y CV hecho en Figma, acá puedes ver mi estilo de prototipado a la hora de diseñar interfaces. ¡Espero te guste!</p>
-            </div>
-            <div class="home_a_a">
-                <a class="home_a_yellow" href="#">Ver proyectos</a><br>
-                <a class="home_a_transparent" href="#"> <img src="images/download.png" alt=""> Descargar CV</a>
-            </div>
+            <p class="home_text_500">Este es mi portafolio y CV hecho en Figma, acá puedes ver mi estilo de prototipado
+                a la hora de diseñar interfaces. ¡Espero te guste!</p>
+        </div>
+        <div class="home_a_a">
+            <a class="home_a_yellow" href="#">Ver proyectos</a><br class="home_br">
+            <a class="home_a_transparent" href="#"> <img src="images/download.png" alt=""> Descargar CV</a>
+        </div>
 
         <div class="home_img_content d-flex">
             <img src="images/Imagen personal.png" alt="">
             <div class="home_content">
                 <p class="home_content_p_yellow">Acerca de mi</p>
-                <p class="home_content_p_fff">Hola! mi nombre es Yusting (Yuxin para los amigos) y tengo una gran afinidad hacía el trabajo colaborativo, me gusta crear diseños que inspiren e involucren a las personas. Como diseñador UI, considero que un buen producto no solo brinda una solución sino que permite crear una experiencia emocional en las personas que lo usan.<br>
-                    En mi proceso creativo utilizo herramientas como Figma, Adobe XD, Photoshop e Illustrator que me ayudan en el flujo de trabajo para la producción de interfaces de usuario.</p>
+                <p class="home_content_p_fff">Hola! mi nombre es Yusting (Yuxin para los amigos) y tengo una gran
+                    afinidad hacía el trabajo colaborativo, me gusta crear diseños que inspiren e involucren a las
+                    personas. Como diseñador UI, considero que un buen producto no solo brinda una solución sino que
+                    permite crear una experiencia emocional en las personas que lo usan.<br class="home_br">
+                    En mi proceso creativo utilizo herramientas como Figma, Adobe XD, Photoshop e Illustrator que me
+                    ayudan en el flujo de trabajo para la producción de interfaces de usuario.</p>
                 <a href="#" class="home_img_content_a">Mas acerca de mi <img src="images/arrow-right.png" alt=""></a>
             </div>
         </div>
@@ -61,7 +66,8 @@
                     Responsive design
                 </p>
                 <p class="home_explain_p">
-                    Con mi experiencia en patrones de diseño responsive tengo una visión clara acerca de como implementarlos de manera efectiva en cualquier proyecto.
+                    Con mi experiencia en patrones de diseño responsive tengo una visión clara acerca de como
+                    implementarlos de manera efectiva en cualquier proyecto.
                 </p>
             </div>
             <div class="home_explain_template">
@@ -70,7 +76,8 @@
                     Sistema de diseño
                 </p>
                 <p class="home_explain_p">
-                    Tengo manejo de sistemas de diseño, lo cual permite agilidad en el proceso de diseño acortando los tiempos en la creación de las interfaces dentro del proyecto.
+                    Tengo manejo de sistemas de diseño, lo cual permite agilidad en el proceso de diseño acortando los
+                    tiempos en la creación de las interfaces dentro del proyecto.
                 </p>
             </div>
             <div class="home_explain_user">
@@ -79,7 +86,8 @@
                     Cooworking
                 </p>
                 <p class="home_explain_p">
-                    Trato de ser un activo valioso en el equipo que esté trabajando, aportando mis conocimientos y material que optimice el flujo de trabajo en el desarrollo del proyecto.
+                    Trato de ser un activo valioso en el equipo que esté trabajando, aportando mis conocimientos y
+                    material que optimice el flujo de trabajo en el desarrollo del proyecto.
                 </p>
             </div>
         </div>
